= CHANGELOG
Hoi Wang <wanghoi@126.com>

== 0.2.2

07/01/2019

- HLS replay
- Cleanups

== 0.2.1

4/23/2019

- Add kick user by 'tcUrl' and 'stream' support
- Fix many bugs